[package]
name = "enumset"
version = "0.1.1"
authors = ["Lymia Aluysia <lymia@lymiahugs.com>"]

description = "A library for creating compact sets of enums."
keywords = ["enum", "bitset"]
categories = ["data-structures"]

documentation = "https://docs.rs/enumset"
repository = "https://github.com/Lymia/enumset"
readme = "README.md"

license = "MIT/Apache-2.0"

[features]
i128 = []
