[package]
name = "enumset"
version = "0.4.3"
authors = ["Lymia Aluysia <lymia@lymiahugs.com>"]
edition = "2018"

description = "A library for creating compact sets of enums."
keywords = ["enum", "bitset"]
categories = ["data-structures"]

documentation = "https://docs.rs/enumset/"
repository = "https://github.com/Lymia/enumset"
readme = "../README.md"

license = "MIT/Apache-2.0"

[features]
nightly = ["enumset_derive/nightly"]
serde = ["serde2", "enumset_derive/serde"]

[dependencies]
enumset_derive = { version = "0.4.2", path = "../enumset_derive" }
num-traits = { version = "0.2", default-features = false }
serde2 = { package = "serde", version = "1.0.91", default-features = false, optional = true }

[dev-dependencies]
bincode = { version = "1.0", features = ["i128"] }
serde_derive = "1.0.91"
serde_json = "1.0.39"
