[package]
name = "enumset"
version = "1.0.1"
authors = ["Alissa Rao <lymia@lymiahugs.com>"]
edition = "2018"

description = "A library for creating compact sets of enums."
keywords = ["enum", "bitset"]
categories = ["data-structures"]

documentation = "https://docs.rs/enumset/"
repository = "https://github.com/Lymia/enumset"
readme = "../README.md"

license = "MIT/Apache-2.0"

[badges]
travis-ci = { repository = "Lymia/enumset", branch = "master" }
maintenance = { status = "actively-developed" }

[features]
serde = ["serde2", "enumset_derive/serde"]

[dependencies]
enumset_derive = { version = "0.5.0", path = "../enumset_derive" }
serde2 = { package = "serde", version = "1.0.91", default-features = false, optional = true }

[dev-dependencies]
bincode = { version = "1.0", features = ["i128"] }
serde_derive = "1.0.91"
serde_json = "1.0.39"
trybuild = "1.0.24"
rustversion = "1.0.2"
