[package]
name = "enumset_derive"
version = "0.5.4"
authors = ["Alissa Rao <lymia@lymiahugs.com>"]
edition = "2018"

description = "An internal helper crate for enumset. Not public API."

documentation = "https://lymia.moe/doc/enumset/enumset/"
repository = "https://github.com/Lymia/enumset"

license = "MIT/Apache-2.0"

[lib]
proc-macro = true

[features]
serde = []

[dependencies]
darling = "0.12.0"
syn = "1"
quote = "1"
proc-macro2 = "1"
