[package]
name = "enumset_derive"
version = "0.5.6"
authors = ["Alissa Rao <lymia@lymiahugs.com>"]
edition = "2018"

description = "An internal helper crate for enumset. Not public API."

documentation = "https://lymia.moe/doc/enumset/enumset/"
repository = "https://github.com/Lymia/enumset"

license = "MIT/Apache-2.0"

[lib]
proc-macro = true

[features]
serde = []

[dependencies]
darling = { version = "0.13.0", default-features = false }
syn = "1"
quote = "1"
proc-macro2 = "1"
proc-macro-crate = { version = "1.1.3", optional = true }
