[package]
name = "enumset_test_embedded"
version = "0.0.0"
edition = "2021"

description = "DO NOT PUBLISH"
publish = false

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.5.0"
defmt = "1.0.1"
defmt-semihosting = "0.3.0"
enumset = { path = "../enumset", features = ["defmt"] }

[build-dependencies]
enumset = { path = "../enumset", features = ["serde"] }
