[package]
name = "enumset_test_trybuild"
version = "1.1.3"
authors = ["Alissa Rao <aura@aura.moe>"]
edition = "2021"

description = "DO NOT PUBLISH"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_derive = "1"

[dev-dependencies]
enumset = { path = "../enumset", features = ["serde"] }
trybuild = "1"
rustversion = "1"
